--- a/styles/style.css
+++ b/styles/style.css
@@ -2,7 +2,6 @@
     font-family: 'Poppins', sans-serif;
 }
 .main-container {
-    display: flex;
     padding: 55px 131px ;
 }
 .header {
@@ -21,8 +20,10 @@
 }
 .nav {
     display: flex;
+    margin: 50px;
 }
 .nav__link {
+    white-space: pre;
     font-size: 20px;
     font-weight: 500;
     text-decoration: none;
@@ -38,5 +39,6 @@
     border: black solid 1px;
     border-radius: 5px;
     color: black;
+    white-space: pre;
 
 }
