--- a/styles/style.css
+++ b/styles/style.css
@@ -40,5 +40,46 @@
     border-radius: 5px;
     color: black;
     white-space: pre;
-
+}
+.sec-1 {
+    display: flex;
+    justify-content: space-between;
+    margin-top: 50px;
+}
+.get-start {
+    display: flex;
+    flex-direction: column;
+    width: 50%;
+}
+.get-start__header-img {
+    display: flex;
+}
+.get-start__header {
+    font-weight: 600;
+    font-size: 64px;
+    line-height: 80px;
+    width: 80%;
+    
+}
+.get-start__img-lightbulb {
+    width: 85px;
+    height: 85px;
+    position: relative;
+    top: 90px;
+}
+.sec-1__pic {
+    width: 55%;
+}
+.get-start__button {
+    text-decoration: none;
+    /*align-self: center;*/
+    background-color: black;
+    padding: 32px 117px;
+    font-size: 34px;
+    font-weight: 400;
+    color: white;
+    border-radius: 20px;
+    width: 438px;
+    height: 118px;
+    line-height: 54px;
 }
