--- a/styles/style.css
+++ b/styles/style.css
@@ -6,13 +6,24 @@
     --base-size: 10px;
     --base-percent: 10%;
 }
+body {
+    min-width: 1025px;
+}
 * {
     box-sizing: border-box;
     font-family: poppins, Arial, Helvetica, sans-serif; 
 }
+.p {
+    margin: calc(var(--base-size)*3) 0;
+}
 .container {
     width: calc(var(--base-percent)*8.5);
     margin: 0 auto;
+}
+.title-articles {
+    text-align: center;
+    font-size: calc(var(--base-size)*3.6);
+    margin: calc(var(--base-size)*9);
 }
 /*header*/
 .header {
@@ -46,9 +57,9 @@
     color: var(--base-color);
     font-size: calc(var(--base-size)*2.4);
     line-height: calc(var(--base-size)*3.6);
-    border: 2px solid var(--base-color);
+    border: calc(var(--base-size)*0.2) solid var(--base-color);
     box-sizing: border-box;
-    border-radius: 5px;
+    border-radius: calc(var(--base-size)*0.5);
     padding: var(--base-size) calc(var(--base-size)*3);
 }
 /*main*/
@@ -79,7 +90,6 @@
     height: calc(var(--base-size)*9);
 }
 .introducory__jpg {
-    /*align-self: center;*/
     object-fit: contain;
     max-width: calc(var(--base-percent)*4.5);
     max-height: calc(var(--base-percent)*4.5);
@@ -87,14 +97,99 @@
 }
 .introductory__p {
     max-width: calc(var(--base-size)*45);
-    margin: calc(var(--base-size)*4) 0;
 }
-.introductory__button /*тут пиздецовый костыль*/{
+.introductory__button {
     text-decoration: none;
+    display: inline-block;
     color: var(--antonim-base-color);
     background-color: var(--base-color);
     font-size: calc(var(--base-size)*3);
-    box-sizing: border-box;
     border-radius: calc(var(--base-size)*1.5);
     padding: var(--base-size) calc(var(--base-size)*5);
+}
+/*skills*/
+.skills__content {
+    display: flex;
+    flex-wrap: wrap;
+}
+.skills__card {
+    background-color: var(--second-color);
+    border-radius: var(--base-size);
+    padding: calc(var(--base-size)*4);
+}
+.skills-title {
+    font-size: calc(var(--base-size)*2.5);
+}
+.skill-card__button {
+    display: inline-block;
+    text-decoration: none;
+    color: var(--antonim-base-color);
+    background-color: var(--base-color);
+    font-size: calc(var(--base-size)*1.8);
+    white-space: nowrap;
+    border-radius: calc(var(--base-size)*0.5);
+    padding: calc(var(--base-size)*1.5) calc(var(--base-size)*5.2);
+}
+.skills__content {
+    display: grid;
+    gap: var(--base-size) var(--base-size);
+}
+.speaking {
+    grid-column: 1 / 1;
+    grid-row: 1 / 3;
+}
+.writing {
+    grid-column: 2 / 2;
+    grid-row: 1 / 1;
+}
+.reading {
+    grid-column: 3 / 3;
+    grid-row: 1 / 1;
+}
+.listening {
+    display: flex;
+    grid-column: 2 / 4;
+    grid-row: 2 / 3;
+}
+.listening__img {
+    object-fit: contain;
+    order: 1;
+    width: calc(var(--base-percent)*12);
+}
+/*about-us*/
+.about-us {
+    margin-top: calc(var(--base-size)*10);
+    display: grid;
+    grid-template-columns: calc(var(--base-percent)*5) calc(var(--base-percent)*4);
+    justify-content: space-between;
+}
+.about-us__title {
+    text-align: left ;
+    align-self: center;
+    margin: 0;
+    grid-row: 1 / 1;
+    grid-column: 1;
+}
+.about-us__p {
+    margin: 0;
+    grid-row: 2 / 2;
+    grid-column: 1;
+    align-self: center;
+}
+.aside-namber {
+    display: flex;
+    justify-content: space-between;
+    grid-row: 3 / 3;
+    grid-column: 1;
+}
+.aside-namber__title {
+    margin: 0;
+}
+.aside-namber__p {
+    text-align: center;
+    margin: 0;
+}
+.about-us__img {
+    grid-row: 1 / 4;
+    grid-column: 2 ;
 }
